crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__build_backend__test__additional_build_backend_keys.snap
---
source: crates/pixi_manifest/src/toml/build_backend.rs
expression: "expect_parse_failure(r#\"\n            backend = { name = \"foobar\", version = \"*\", sub = \"bar\" }\n        \"#)"
---
  × Unexpected keys, expected only 'version', 'url', 'git', 'path', 'branch', 'rev', 'tag', 'lfs', 'subdirectory', 'build', 'build-number', 'file-name', 'extras', 'flags', 'channel', 'subdir',
  │ 'license', 'license-family', 'when', 'track-features', 'md5', 'sha256'
   ╭─[pixi.toml:2:57]
 1 │
 2 │             backend = { name = "foobar", version = "*", sub = "bar" }
   ·                                                         ─┬─
   ·                                                          ╰── 'sub' was not expected here
 3 │
   ╰────
  help: Did you mean 'subdir'?
