crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__build_backend__test__config_parsing.snap
---
source: crates/pixi_manifest/src/toml/build_backend.rs
expression: parsed.value
---
PackageBuild {
    backend: BuildBackend {
        name: PackageName {
            normalized: None,
            source: "foobar",
        },
        spec: DetailedVersion(
            DetailedSpec {
                version: Some(
                    Any,
                ),
                build: None,
                build_number: None,
                file_name: None,
                extras: None,
                flags: None,
                channel: None,
                subdir: None,
                license: None,
                license_family: None,
                condition: None,
                track_features: None,
                md5: None,
                sha256: None,
            },
        ),
    },
    additional_dependencies: {},
    channels: None,
    source: None,
    config: Some(
        Map(
            {
                String(
                    "integer",
                ): I64(
                    1234,
                ),
                String(
                    "key",
                ): String(
                    "value",
                ),
                String(
                    "nested",
                ): Map(
                    {
                        String(
                            "abc",
                        ): String(
                            "def",
                        ),
                    },
                ),
                String(
                    "other",
                ): Seq(
                    [
                        String(
                            "foo",
                        ),
                        String(
                            "bar",
                        ),
                    ],
                ),
            },
        ),
    ),
    flags: [],
    target_config: None,
    build_string_prefix: None,
    build_number: None,
    secrets: {},
}
