crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__build_backend__test__empty_backend_channels.snap
---
source: crates/pixi_manifest/src/toml/build_backend.rs
expression: "expect_parse_failure(r#\"\n            backend = { name = \"foobar\", version = \"*\", channels = [] }\n        \"#)"
---
  × No channels specified for the build backend dependencies
   ╭─[pixi.toml:2:68]
 1 │
 2 │             backend = { name = "foobar", version = "*", channels = [] }
   ·                                                                    ──
 3 │
   ╰────
