crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__build_backend__test__missing_backend.snap
---
source: crates/pixi_manifest/src/toml/build_backend.rs
expression: "expect_parse_failure(\"\")"
---
  × missing field 'backend' in table
   ╭─[pixi.toml:1:1]
   ╰────
