crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__build_backend__test__missing_name.snap
---
source: crates/pixi_manifest/src/toml/build_backend.rs
expression: "expect_parse_failure(r#\"\n            backend = { version = \"12.*\" }\n        \"#)"
---
  × missing field 'name' in table
   ╭─[pixi.toml:2:23]
 1 │
 2 │             backend = { version = "12.*" }
   ·                       ────────────────────
 3 │
   ╰────
