crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__build_backend__test__missing_version_specifier.snap
---
source: crates/pixi_manifest/src/toml/build_backend.rs
expression: "expect_parse_failure(r#\"\n            backend = { name = \"foobar\" }\n        \"#)"
---
  × one of `version`, `build`, `build-number`, `file-name`, `channel`, `subdir`, `md5`, `sha256`, `git`, `url`, or `path` must be specified
   ╭─[pixi.toml:2:23]
 1 │
 2 │             backend = { name = "foobar" }
   ·                       ───────────────────
 3 │
   ╰────
